# docs/swagger.json
@@ -25,6 +25,27 @@
                 }
             }
         },
+        "/solution": {
+            "get": {
+                "description": "get next solution",
+                "summary": "get next solution",
+                "operationId": "get-next-solution",
+                "responses": {
+                    "200": {
+                        "description": "solved matrix",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/riddle.Cell"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/solve": {
             "post": {
                 "description": "solve riddle",
@@ -55,15 +76,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "solved matrix",
+                        "description": "number of solutions",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/riddle.Cell"
-                                }
-                            }
+                            "type": "integer"
                         }
                     }
                 }
@@ -74,10 +89,10 @@
         "riddle.Cell": {
             "type": "object",
             "properties": {
-                "isMarked": {
+                "IsMarked": {
                     "type": "boolean"
                 },
-                "value": {
+                "Value": {
                     "type": "integer"
                 }
             }
